tests/corpus/negative/N16-list-literal-return/source.py
def new_list():
    return [1, 2, 3]
